# hstar-z3

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: check.py  converge.py  inhabit.py  profile.py  proofs.ipynb  section_retract.py  simple.py  sygus.py  terms.ipynb  terms.py
hstar/: ast.py  bridge.py  enumeration.py  functools.py  grammar.py  grammars.py  hashcons.py  itertools.py  language.py  logging.py  normal.py  profile.py  reduction.py  solvers.py  synthesis.py  theory.py  util.py  varsets.py
notebooks/: terms.ipynb
test/: conftest.py  test_ast.py  test_basic.py  test_bridge.py  test_enumeration.py  test_grammar.py  test_itertools.py  test_language.py  test_normal.py  test_solvers.py  test_synthesis.py  test_theory.py  test_util.py
