[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hstar"
version = "0.1.0"
description = "Synthesizing λ-join-calculus behaviors in Z3"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache 2"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache 2 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "immutables",
    "z3-solver",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools]
packages = ["hstar"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "E741",
]

[tool.pylint]
max-line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["hstar"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "hstar.grammar"
disable_error_code = ["misc"]  

[[tool.mypy.overrides]]
module = "z3"
ignore_missing_imports = true
